--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Все о шпицах. Наших шпициках</title>
+    <title>Главная страница</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <style>
@@ -12,17 +12,22 @@
   </style>
   </head>
   <body>
-    <h1>Сайт о шпициках</h1>
-    <h2>Посмотрите на эту мордаху</h2>
-    <img src="images/spitz.jpg" alt="Шпицулик">
-    <h3>Как их не полюбить?</h3>
-    <p>Шпицы самые милые животные. Они бывают следующих видов:</p>
-    <ul>
-      <li>Померанский шпиц</li>
-      <li>Немецкий шпиц</li>
-    </ul>
-    <a href="https://g.co/kgs/uNw3XP">Подробнее о малышах</a>
-    <button>Change user</button>
-    <script src="scripts/main.js"></script>
+    <header>
+      <h1></h1>
+    </header>
+    <nav>
+      <ul class="menu-main">
+        <li><a href="" class="current">Главная страница</a></li>
+        <li><a href="about-pet.html">Шпицики</a> </li>
+        <li><a href="pictures.html">Фотографии</a> </li>
+        <li><a href="blog.html">Общение</a> </li>
+        <li><a href="about-us.html">О нас</a> </li>
+      </ul>
+    </nav>
+    <menu>
+      <article>
+        <h3>Доброго времени суток! Если вы попали на этот сайт, значит очень любите шпицев!</h3>
+      </article>
+    </menu>
   </body>
 </html> 
