--- a/blog.html
+++ b/blog.html
@@ -12,8 +12,7 @@
   </style>
   </head>
   <body>
-    <h1>Общайтесь</h1>
-    <ul class="menu-main">:
+    <ul class="menu-main">
       <li><a href="index.html">Главная страница</a></li>
       <li><a href="about-pet.html">Шпицики</a> </li>
       <li><a href="pictures.html">Фотографии</a> </li>
@@ -21,6 +20,10 @@
       <li><a href="about-us.html">О нас</a></li>
     </ul>
 
-
+    <main>
+      <h1>Самое важное - общение</h1>
+      <h2 align="center" class="string">К сожалению сегодня ни с кем не поговорите. Данный раздел находится в разработке!</h2>
+    </main>
+    
   </body>
 </html> 
