--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Главная страница</title>
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <style>
@@ -27,6 +28,13 @@
     <menu>
       <article>
         <h3>Доброго времени суток! Если вы попали на этот сайт, значит очень любите шпицев!</h3>
+        <h4 class="string" align="center">Данный веб-сайт сделан чисто в ознакомительных целях и для проверки своих способностей. 
+            Прошу жестко не критиковать работу, так как это мой первый опыт в разработке сайтов. 
+            Понятно, что еще многое нужно добавить, я работаю над этим. 
+            Следующий сайт будет написан на php, а, следовательно, будет лучше работать. 
+            Ну а пока, что наслаждайтесь подборкой моментов со шпицами.
+        </h4>
+        <p align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/VxEklGXbAsg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
       </article>
     </menu>
   </body>
