--- a/about-pet.html
+++ b/about-pet.html
@@ -3,18 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>Все о наших любимцах</title>
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <style>
    body {
     background: url(images/fon_spitz.png); /* Цвет фона и путь к файлу */
    }
+
+   .c {
+    border: 1px solid #333; /* Рамка */
+    display: inline-block;
+    padding: 5px 15px; /* Поля */
+    text-decoration: none; /* Убираем подчёркивание */
+    color: #000; /* Цвет текста */
+    background-color: rgba(255, 166, 0, 0.479);
+  }
+   .c:hover {
+    box-shadow: 0 0 5px rgba(0,0,0,0.3); /* Тень */
+    background: linear-gradient(to bottom, #fcfff4, #e9e9ce); /* Градиент */
+    color: rgb(255, 123, 0);
+   }
+  
   </style>
   </head>
   <body>
-    <header>
-      <h1>Породы шпициков</h1>
-    </header>
+   
     <nav>
       <ul class="menu-main">
         <li><a href="index.html">Главная страница</a></li>
@@ -24,24 +38,18 @@
         <li><a href="about-us.html">О нас</a> </li>
       </ul>
     </nav>
-    
+    <header>
+      <h1>Породы шпициков</h1>
+    </header>
     <main>
       <article display: block;>
-        <dl>
-          <dt class="string">Померанский шпиц(Померанец)</dt>
-          <img src="images/pomeran.png" width="300" height="200" align="left" vspace="5" hspace="5">
-          <dd class="string">Порода собак, относящаяся к категории «Шпицы и породы примитивного типа» по классификации МКФ.
-            У померанца шерсть ватная, мягкая и набивная, мордочка короткая, ещё у померанцев лоб пушистый. Кроме того, при ежедневном расчёсывании померанцы редко линяют. Воспитание и уход
-            Шпиц понятлив, но всё же нуждается в постоянной дрессировке, так как без неё он станет непослушным, вредным и агрессивным. В пять месяцев он легко усваивает все необходимые команды. Шпиц сам прекрасно ориентируется в ситуации и делает всё, чтобы заслужить одобрение хозяина.
-            Шпицев категорически нельзя стричь, разрешена только легкая окантовка по породе. При постоянных стрижках нарушается структура шерсти, постепенно исчезает остевой волос, прежнюю шикарную шубку в некоторых случаях бывает вернуть уже невозможно. Возможно развитие такого заболевания, как аллопеция X. При правильном уходе и регулярном вычёсывании собака не будет линять и раскидывать шерсть по дому, оставлять её на мебели и коврах. Выпавшие волоски застревают в плотном подшёрстке, а оттуда их можно аккуратно удалить щётками.
-          </dd>
-          <dt class="string">Немецкий шпиц</dt>
-          <img src="images/german.png" width="300" height="200" align="left" vspace="5" hspace="5">
-          <dd class="string">Порода собак. Собака-компаньон. Немецкие шпицы являются потомками торфяной собаки каменного века «canis familiaris palustris Ruthimeyer» и более позднего свайного шпица. 
-              Считаются старейшей в Средней Европе породой и предками множества других пород. Немецкий шпиц обладает хорошим здоровьем, уравновешенным характером, удобен в содержании, он привязан к хозяину, обладает прекрасным умом и легко поддаётся дрессировке. Это очень умные собаки, ласковые и старательные. Немецкий шпиц считается отличным другом и компаньоном. Если правильно воспитать шпица, то он может лаять только по команде. Немецкие миниатюрные шпицы склонны к ожирению.
-            </dd>
 
-        </dl>
+          <h3 class="string">Померанский шпиц</h3>
+          <img src="images/pomeran.png" width="300" height="200" align="center">
+          <a href="pomeran.html" class="c" align="center">Подробнее о породе</a>
+          <h3 class="string">Немецкий шпиц</h3>
+          <img src="images/german.png" width="300" height="200" align="center">
+          <a href="deutch.html" class="c" align="center">Подробнее о породе</a>
 
         <p>Более подробную информацию можно найти в интернете нажав на кнопку: <a href="https://www.google.com/search?hl=ru-RU&sxsrf=ALeKk03aFBXcXYD5x7BI1PeWMPIvoLbrBA%3A1587772700004&ei=G32jXqXUPJH9rgSrz6pw&q=%D0%A8%D0%BF%D0%B8%D1%86+%D0%BF%D0%BE%D0%BC%D0%B5%D1%80%D0%B0%D0%BD%D1%81%D0%BA%D0%B8%D0%B9+%D0%B8+%D0%BD%D0%B5%D0%BC%D0%B5%D1%86%D0%BA%D0%B8%D0%B9&oq=%D0%A8%D0%BF%D0%B8%D1%86+%D0%BF%D0%BE%D0%BC%D0%B5%D1%80%D0%B0%D0%BD%D1%81%D0%BA%D0%B8%D0%B9+%D0%B8+%D0%BD%D0%B5%D0%BC%D0%B5%D1%86%D0%BA%D0%B8%D0%B9&gs_lcp=CgZwc3ktYWIQAzICCAAyAggAMgYIABAWEB4yBggAEBYQHjIGCAAQFhAeMgYIABAWEB4yBggAEBYQHjIGCAAQFhAeMgYIABAWEB46BAgjECc6BAgAEEM6BAgAEA06CAgAEAgQDRAeUEdYh0tgtk1oBXAAeAGAAa0OiAHdQZIBEjEwLjQuMi4yLjEuMS4yLjEuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab&ved=0ahUKEwjlzZGeooLpAhWRvosKHaunCg4Q4dUDCAs&uact=5">ТЫК</a> </p>
    </article>
