--- a/about-us.html
+++ b/about-us.html
@@ -13,10 +13,10 @@
   </head>
   <body>
     <header>
-      <h1>Информация о создателях сайта</h1>
+      
     </header>
     <nav>
-      <ul class="menu-main">:
+      <ul class="menu-main">
         <li><a href="index.html">Главная страница</a></li>
         <li><a href="about-pet.html">Шпицики</a> </li>
         <li><a href="pictures.html">Фотографии</a> </li>
@@ -24,19 +24,28 @@
         <li><a href="" class="current">О нас</a></li>
       </ul>
     </nav>
+
+    <h1>Информация о создателях сайта</h1>
     <main>
 
       <!-- Она содержит статью -->
       <article>
-        <h3>Контакты:
-          email - traver.unimmer@gmail.com
-          vk - <a href="https://vk.com/id487151877">Игорь Аверьянов</a>
+        <h3 class="string">Контакты:
+          <br>
+          email - traver.unimmer@gmail.com</br>
+          <br>
+          vk - <a href="https://vk.com/id487151877">Игорь Аверьянов</a> - создатель сайта</br>
+        </h3>
+        <h3 class="string">
+          email - 	n.m.aver@mail.ru
+          <br>
+          vk - <a href="https://vk.com/natalie.aver">Наталья Аверьянова</a> - редактор
         </h3>
       </article>
     </main>
 
     <footer>
-      <p>©Авторские права никому не принадлежат, 2050. Все права защищены.</p>
+      <p>©Авторские права никому не принадлежат, 2033. И не будут принадлежать.</p>
     </footer>
 
   </body>
