--- a/pictures.html
+++ b/pictures.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Фотографии</title>
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <style>
